...
                            <constraint firstItem="voO-Y3-r9U" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="bOT-Ca-zDe"/>
                            <constraint firstItem="voO-Y3-r9U" firstAttribute="top" secondItem="RTh-zY-Uhw" secondAttribute="bottom" id="gHL-1i-X2L"/>
                            <constraint firstItem="dWl-3L-TRm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mvS-pz-S6P"/>
                            <constraint firstItem="dWl-3L-TRm" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="xGk-qz-SaP"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Flickr Gallery" id="pFZ-Ue-akQ">
                        <barButtonItem key="rightBarButtonItem" title="Sort" id="hAh-Tg-x2J">
                            <connections>
                                <action selector="sortingButtonTapped:" destination="BYZ-38-t0r" id="yAu-6K-b9o"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
